--- a/spacy.ipynb
+++ b/spacy.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOfsLkbqU5I6PQdFcSscipM",
+      "authorship_tag": "ABX9TyPSNnrD5EM5IXB/xYoU8Gzk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +33,22 @@
         "id": "SsdEgRCuE-Df"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "# Instala o spacy nesta versão especifica\n",
+        "!pip install -U spacy==3.7.2"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Baixa o modelo de texto grande (lg)\n",
+        "!python -m spacy download 'pt_core_news_lg'"
+      ],
+      "metadata": {
+        "id": "2EKv4AvWHxfk"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
